refactor(cqlite-kits): fold cqlite into the trino kit as a catalog
The cqlite Trino integration is no longer a standalone kit. Like
cassandra/clickhouse/opensearch/tidb, cqlite is now a catalog property
file of the trino kit (kits/trino/catalogs/cqlite.properties.template),
auto-discovered by the trino kit's update-catalogs.sh and applied via its
single helm upgrade. There is no kit install cqlite-trino command.

- Add kits/trino/catalogs/cqlite.properties.template (connector.name=
  cqlite_flight + sidecar/flight/read-mode/local-dc placeholders).
- Delete the entire standalone kits/cqlite-trino/ directory.
- Remove the sibling trino-values.yaml discovery loop from
  update-catalogs.sh.
- Guard test: assert the trino source lists catalogs/cqlite.properties
  .template and that cqlite-trino no longer resolves as a standalone kit;
  drop the old gradle-assemble/helm-values-fragment assertions.
- Docs: delete the standalone cqlite-trino page; document the cqlite
  catalog on the trino page; fix SUMMARY nav, kits.md, development/kits.md,
  and cross-references from cqlite-flight/trino-loadtest.
- Test plan: replace the kit install cqlite-trino step with the trino-kit
  catalog reality.
- OpenSpec: remove design D4, revise D1, adjust proposal/tasks/spec
  scenarios to the catalog-via-trino-kit reality.

DEFERRED (blocked on pmcfadin/cqlite#2869): the cqlite_flight connector
plugin will ship as a single self-contained Shadow fat jar fetched once to
a versioned per-node hostPath and mounted into
/usr/lib/trino/plugin/cqlite_flight/. That artifact does not exist yet, so
the old pod-start Gradle resolve (gradle-assemble-plugin/ + trino-values
.yaml initContainer) is removed rather than replaced. The catalog file and
update-catalogs.sh carry a documented TODO for the fat-jar delivery; the
catalog ships staged and is intentionally not enabled until #2869 lands.